# Proov

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
calibration/: calibration_set.json
deploy/: install.sh  proov.env.example  proov.service
proov/: __init__.py  __main__.py  badge.py  cache.py  calibration.py  citations.py  companion.py  config.py  deliverable.py  engine.py  ledger.py  llm.py  metrics.py  provider.py  receipt.py  redaction.py  search.py  services.py  types.py  validation.py  verdict.py  webdemo.py
scripts/: calibrate.py  dashboard.py  place_test_order.py  probe_anchor.py  requester_online.py  research_caller.py  try_this.py
tests/: conftest.py  test_badge.py  test_cache.py  test_calibration.py  test_citations.py  test_companion.py  test_config.py  test_dashboard.py  test_deliverable.py  test_engine.py  test_ledger.py  test_llm.py  test_metrics.py  test_provider.py  test_receipt.py  test_redaction.py  test_search.py  test_try_this.py  test_types.py  test_validation.py  test_verdict.py  test_webdemo.py
