[project]
name = "proov"
version = "0.1.0"
description = "Proof-of-Verification Oracle — a paid, callable CAP agent on the CROO Agent Store."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Web-framework/search deps arrive in Epics 3-4 — keep the dependency surface minimal.
dependencies = [
    "croo-sdk",
    # First non-croo runtime dep (Story 1.4). Provides real Ethereum keccak256 for the
    # on-chain receipt — `hashlib.sha3_256` is NIST SHA3, a DIFFERENT digest, and would
    # silently fail to match CAP's Base anchor. pycryptodome is a single pure package
    # (ships 3.13 wheels) and pulls in NO Ethereum stack.
    "pycryptodome>=3.20",
    # Async HTTP client for the Gemini LLM provider (Story 2.1) — and the Story 2.2 search
    # provider. Already installed (0.28.1, transitive via croo-sdk); declared here to make
    # the now-direct dependency explicit. Deliberately NO vendor LLM SDK (google-genai):
    # a thin raw-REST provider keeps the LLMProvider interface thin and swappable.
    "httpx>=0.27",
]

[project.optional-dependencies]
# Test-only deps — install with: pip install -e ".[test]". Not shipped at runtime.
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Source layout established in Story 1.2. Only the `[A]` provider adapter + config + entrypoint
# live here for now; engine/LLM/search/cache (Epic 2+) extend this tree later.
packages = ["proov"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
